--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expertos en dispositivos al rescate</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <title>Mi Parroquia</title>
+    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <script src="scripts.js"></script>
 </head>
 <body>
     <header>
-        <h1>Expertos en dispositivos al rescate</h1>
+        <img src="logo.jpg" alt="Logo">
         <nav>
-            <a href="#computadoras">Computadoras</a>
-            <a href="#telefonos">Teléfonos</a>
+            <ul id="menu">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#sacramentos">Sacramentos</a></li>
+                <li><a href="#cursos">Cursos</a></li>
+                <li><a href="#donaciones">Donaciones</a></li>
+            </ul>
         </nav>
+        <input type="search" placeholder="Buscar...">
     </header>
+
     <main>
-        <section id="computadoras">
-            <h2>Soluciones para computadoras</h2>
-            <p>Aquí encontrarás soluciones para problemas comunes en computadoras.</p>
+        <section id="inicio">
+            <!-- contenido del inicio -->
         </section>
-        <section id="telefonos">
-            <h2>Soluciones para teléfonos</h2>
-            <p>Aquí encontrarás soluciones para problemas comunes en teléfonos móviles.</p>
+        <section id="sacramentos">
+            <!-- contenido de los sacramentos -->
+        </section>
+        <section id="cursos">
+            <!-- contenido de los cursos -->
+        </section>
+        <section id="donaciones">
+            <!-- contenido de las donaciones -->
         </section>
     </main>
+
     <footer>
-        <p>Expertos en dispositivos al rescate &copy; 2023. Todos los derechos reservados.</p>
+        <!-- links a RRSS -->
     </footer>
 </body>
 </html>
